--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
@@ -316,6 +316,23 @@
 @media (max-width: 767px){
 
 	body.front-page{
+		.main-container{
+			/* Intro Boxes */
+			#block-views-homepage-banners-block{
+				.view-homepage-banners{
+					.views-row-first, .views-row-last{
+						height: auto;
+						p{
+							padding-left: 1em;
+							padding-right: 1em;
+						}
+					}
+				}
+			}
+		}
+	}
+
+	body.front-page{
 
 		.newsletter-social-media .newsletter{
 			border-right: 0;
