--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -11488,26 +11488,37 @@ body.page-node-253 #block-hwc-partner-hwc-partner-back-to-private-zone .breadcru
     margin-bottom: 0;
   }
   /* press room */
-  body.press-room .media-body,
-  body.european-week .media-body,
-  body.good-practice-exchange .media-body {
+  .main-container body.press-room .media-body {
     height: auto;
     padding-bottom: 3em;
   }
-  body.press-room .pull-left,
-  body.european-week .pull-left,
-  body.good-practice-exchange .pull-left {
+  .main-container body.press-room .pull-left {
     display: none;
   }
-  body.press-room #block-hwc-european-week-news-events,
-  body.european-week #block-hwc-european-week-news-events,
-  body.good-practice-exchange #block-hwc-european-week-news-events {
+  .main-container body.press-room #block-hwc-european-week-news-events {
     margin-left: -15px;
     margin-right: -15px;
   }
-  body.press-room .field-name-body,
-  body.european-week .field-name-body,
-  body.good-practice-exchange .field-name-body {
+  .main-container body.press-room .field-name-body {
+    width: 100%;
+    padding-left: 5px;
+  }
+  body.european-week .two-box-column .media-body,
+  body.good-practice-exchange .two-box-column .media-body {
+    height: auto;
+    padding-bottom: 3em;
+  }
+  body.european-week .two-box-column .pull-left,
+  body.good-practice-exchange .two-box-column .pull-left {
+    display: none;
+  }
+  body.european-week .two-box-column #block-hwc-european-week-news-events,
+  body.good-practice-exchange .two-box-column #block-hwc-european-week-news-events {
+    margin-left: -15px;
+    margin-right: -15px;
+  }
+  body.european-week .two-box-column .field-name-body,
+  body.good-practice-exchange .two-box-column .field-name-body {
     width: 100%;
     padding-left: 5px;
   }
