--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
@@ -1241,36 +1241,60 @@
 	}
 
 	/* press room */
-	body.press-room, body.european-week, body.good-practice-exchange{
+	.main-container{
+		body.press-room{
+			.media-body{
+				height: auto;
+				padding-bottom: 3em;
+			}
 
-		.media-body{
-			height: auto;
-			padding-bottom: 3em;
-		}
+			.pull-left{
+				display: none;
+			}
 
-		.pull-left{
-			display: none;
-		}
+			#block-hwc-european-week-news-events{
+				margin-left: -15px;
+				margin-right: -15px;
 
-		#block-hwc-european-week-news-events{
-			margin-left: -15px;
-			margin-right: -15px;
+			}
 
-		}
-
-		.field-name-body{
-			width: 100%;
-    		padding-left: 5px;
+			.field-name-body{
+				width: 100%;
+	    		padding-left: 5px;
+			}
 		}
 	}
 
+	body.european-week, body.good-practice-exchange{
+		.two-box-column{
+			.media-body{
+				height: auto;
+				padding-bottom: 3em;
+			}
+
+			.pull-left{
+				display: none;
+			}
+
+			#block-hwc-european-week-news-events{
+				margin-left: -15px;
+				margin-right: -15px;
+
+			}
+
+			.field-name-body{
+				width: 100%;
+	    		padding-left: 5px;
+			}
+		}
+	}
+	
+	
 	#block-hwc-good-practice-exchange-gpe-news-events .view-news .media-body{
 		height: auto;
 	}
 
 	body.press-room{
-
-
 		.related-resources{ 
 			.related-resources-boxes{ 
 				div{
