--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -11488,18 +11488,18 @@ body.page-node-253 #block-hwc-partner-hwc-partner-back-to-private-zone .breadcru
     margin-bottom: 0;
   }
   /* press room */
-  .main-container body.press-room .media-body {
+  body.press-room .media-body {
     height: auto;
     padding-bottom: 3em;
   }
-  .main-container body.press-room .pull-left {
+  body.press-room .media .pull-left {
     display: none;
   }
-  .main-container body.press-room #block-hwc-european-week-news-events {
+  body.press-room #block-hwc-european-week-news-events {
     margin-left: -15px;
     margin-right: -15px;
   }
-  .main-container body.press-room .field-name-body {
+  body.press-room .field-name-body {
     width: 100%;
     padding-left: 5px;
   }
