--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
@@ -1241,29 +1241,30 @@
 	}
 
 	/* press room */
-	.main-container{
-		body.press-room{
-			.media-body{
-				height: auto;
-				padding-bottom: 3em;
-			}
+	body.press-room{
+		.media-body{
+			height: auto;
+			padding-bottom: 3em;
+		}
 
+		.media{
 			.pull-left{
 				display: none;
 			}
+		}
 
-			#block-hwc-european-week-news-events{
-				margin-left: -15px;
-				margin-right: -15px;
+		#block-hwc-european-week-news-events{
+			margin-left: -15px;
+			margin-right: -15px;
 
-			}
+		}
 
-			.field-name-body{
-				width: 100%;
-	    		padding-left: 5px;
-			}
+		.field-name-body{
+			width: 100%;
+    		padding-left: 5px;
 		}
 	}
+
 
 	body.european-week, body.good-practice-exchange{
 		.two-box-column{
