--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
@@ -20,6 +20,13 @@
 		max-width: 100%;
 	}
 
+	/* Get your certificate */
+	.page-get-involved-get-your-certificate{
+		.pane-node-body{
+			width: 66%;
+		}
+	} 
+
 
 	header.navbar-default{
 		&.sticky-menu{
