MHWC-285 - Tablet Homepage: the green boxes text and buttons do not fit in the boxes

--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
@@ -15,6 +15,28 @@
 		}
 	}
 
+	html:lang(bg),
+	html:lang(de),
+	html:lang(lv),
+	html:lang(nl),
+	html:lang(no),
+	html:lang(pt),
+	html:lang(ro),
+	html:lang(it)
+	{
+		body.front-page {
+			.main-container {
+				#block-views-homepage-banners-block {
+					.view-homepage-banners {
+						.views-row-last {
+							height: auto;
+						}
+					}
+				}
+			}
+		}
+	}
+
 	
 	.intro-footer{
 		max-width: 100%;
