--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -9464,6 +9464,7 @@ html:lang(el)
     float: none;
     text-transform: none;
     padding-left: 0;
+    width: auto;
     &:hover{
     	text-decoration: underline;
     }
