--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -2727,6 +2727,24 @@ span.pages{
     width: 177px;
 }
 
+html:lang(hu){
+	.publication-see-more-bottom-container{
+		.news-see-more-button{
+			font-size: 1rem !important;
+		}
+	}
+}
+
+html:lang(pl){
+	.publication-see-more-bottom-container{
+		.news-see-more-button{
+			background: url(../images/ico-plus-green.png) no-repeat 95% 12px;
+		}
+	}
+}
+
+    
+
 .content-fluid{
 	h2{
 		color: #003399;
@@ -9425,6 +9443,7 @@ html:lang(is),
 html:lang(it),
 html:lang(nl),
 html:lang(pl),
+html:lang(hu),
 html:lang(ro)
 {
 	body{
