--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-480.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-480.less
@@ -248,7 +248,9 @@
 							top: 5px;
 							border-top-right-radius: 0;
 							border-bottom-right-radius: 0;
-							padding-right: 1em;
+							padding-left: 0;
+							padding-right: 0;
+							text-align: center;
 						}
 					}
 				}
