--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
@@ -316,6 +316,23 @@
 @media (max-width: 767px){
 
 	body.front-page{
+		.main-container{
+			/* Intro Boxes */
+			#block-views-homepage-banners-block{
+				.view-homepage-banners{
+					.views-row-first, .views-row-last{
+						height: auto;
+						p{
+							padding-left: 1em;
+							padding-right: 1em;
+						}
+					}
+				}
+			}
+		}
+	}
+
+	body.front-page{
 
 		.newsletter-social-media .newsletter{
 			border-right: 0;
@@ -808,31 +825,32 @@
 
 	/*Footer*/
 	.footer{
-		padding-left: 0;
-		.on-the-web{
-			span:nth-child(1){
-				width: auto;
-			}
-		}
-
+		padding: 0;
 		div.container{
 			padding-left: 15px;
 			padding-right: 15px;
 		}
+		.content-second-footer{
+			display: flex;
+			width: 100%;
+			margin: 0;
+			float: none;
+		}
 		div.on-the-web{
-			margin-right: 0;
+			margin: 1rem 0;
+    	display: flex;
+	    justify-content: flex-start;
+	    width: 100%;
+			span:nth-child(1){
+				width: auto;
+			}
 		}
-		div.on-the-web a{
-			margin-left: 3px;
-		}
-
 		h2, p {
 			display: block;
 		}
-
 		.intro-footer{
-			float: left;
-			padding-bottom: 2em;
+			float: none;
+			padding-bottom: 1em;
 		}
 	}
 
@@ -1223,15 +1241,16 @@
 	}
 
 	/* press room */
-	body.press-room, body.european-week, body.good-practice-exchange{
-
+	body.press-room{
 		.media-body{
 			height: auto;
 			padding-bottom: 3em;
 		}
 
-		.pull-left{
-			display: none;
+		.media{
+			.pull-left{
+				display: none;
+			}
 		}
 
 		#block-hwc-european-week-news-events{
@@ -1246,13 +1265,37 @@
 		}
 	}
 
+
+	body.european-week, body.good-practice-exchange{
+		.two-box-column{
+			.media-body{
+				height: auto;
+				padding-bottom: 3em;
+			}
+
+			.pull-left{
+				display: none;
+			}
+
+			#block-hwc-european-week-news-events{
+				margin-left: -15px;
+				margin-right: -15px;
+
+			}
+
+			.field-name-body{
+				width: 100%;
+	    		padding-left: 5px;
+			}
+		}
+	}
+	
+	
 	#block-hwc-good-practice-exchange-gpe-news-events .view-news .media-body{
 		height: auto;
 	}
 
 	body.press-room{
-
-
 		.related-resources{ 
 			.related-resources-boxes{ 
 				div{
@@ -1340,6 +1383,13 @@
 
 	.page-node-160 #block-views-napo-film-carousel-slidehow #napo_films .napo_films .num_slides > div .napo-film-title{
 		display: none;
+	}
+
+	.content-order-copy{
+		img{
+			width: 120px;
+			top: 14px;
+		}
 	}
 
 }
