--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -212,7 +212,8 @@ select {
 }
 .btn-background-transparent {
   background: transparent;
-  width: 208px;
+  min-width: 208px;
+  width: auto;
   color: #FFF;
   border: 3px solid #FFF;
   padding: 0.6em 2.5em 0.6em 1.5em;
@@ -1645,7 +1646,7 @@ input[type="checkbox"]:checked + label .my-checkbox:after {
 }
 .box-latest-publications .right-column {
   float: left;
-  width: 185px;
+  width: 200px;
   padding: 1em;
 }
 .box-latest-publications .publication-date {
@@ -1987,24 +1988,30 @@ span.title-select {
 .content-order-copy {
   color: #003399;
   padding: 1.5em 0 1em 1em;
-  border-top: 10px solid #FFF;
+  margin-top: 10px;
   background: #daea96;
   float: left;
   width: 100%;
   margin-bottom: 1em;
+  position: relative;
+  border-radius: 5px;
 }
 .content-order-copy img {
   width: 120px;
   height: auto;
   float: right;
   margin-left: 1em;
+  position: absolute;
+  right: 10px;
+  top: 14px;
 }
 .content-order-copy a {
   color: #003399;
   font-weight: bold;
   text-decoration: underline;
   font-size: 1.2rem;
-  padding-right: 20px;
+  width: 135px;
+  padding-right: 0;
   float: left;
 }
 .content-order-copy a:hover {
@@ -2012,9 +2019,6 @@ span.title-select {
 }
 .content-order-copy a:hover img {
   opacity: 0.8;
-}
-.content-order-copy {
-  display: none;
 }
 div.publications-detail-right-column > a.download {
   margin-left: 3em;
@@ -2319,7 +2323,13 @@ span.pages {
   bottom: 0;
   position: absolute;
   margin-bottom: 16px;
-  width: 174px;
+  width: 177px;
+}
+html:lang(hu) .publication-see-more-bottom-container .news-see-more-button {
+  font-size: 1rem !important;
+}
+html:lang(pl) .publication-see-more-bottom-container .news-see-more-button {
+  background: url(../images/ico-plus-green.png) no-repeat 95% 12px;
 }
 .content-fluid h2 {
   color: #003399;
@@ -2472,7 +2482,7 @@ span.pages {
 }
 .footer div.on-the-web span:nth-child(1) {
   padding-top: 5px;
-  padding-right: 2em;
+  padding-right: 0.2em;
 }
 .footer div.on-the-web span {
   display: block;
@@ -2509,6 +2519,7 @@ span.pages {
 }
 .region-footer {
   clear: both;
+  margin-bottom: 1rem;
 }
 .footer {
   margin-top: 3em;
@@ -4824,7 +4835,7 @@ ul[data-sa-theme="basic-green"].ui-menu {
   max-width: none;
 }
 .page-get-involved-get-your-certificate .pane-node-body {
-  width: 72%;
+  width: 79%;
   padding-left: 1em;
 }
 .page-get-involved-get-your-certificate .control-label {
@@ -5270,6 +5281,7 @@ body.european-week .view-news .media > .pull-left {
 body.press-room .view-news ul.media-list li.media,
 body.european-week .view-news ul.media-list li.media {
   border-bottom: 1px solid #ACC700;
+  position: relative;
   padding-bottom: 2em;
   padding-top: 1em;
 }
@@ -5356,8 +5368,8 @@ body.european-week .view-frontpage-events .content-event {
 }
 body.press-room .media-body,
 body.european-week .media-body {
-  height: 220px;
-  position: relative;
+  height: auto;
+  padding-bottom: 3em;
 }
 body.press-room .media-body p,
 body.european-week .media-body p {
@@ -5367,7 +5379,7 @@ body.press-room .media-body a.more-link,
 body.european-week .media-body a.more-link {
   float: left;
   position: absolute;
-  bottom: 0;
+  bottom: 2.4em;
   margin-left: 0;
   transition: 300ms;
   background-color: transparent;
@@ -5383,9 +5395,6 @@ body.european-week .more-link {
   clear: both;
 }
 /* HW20-785 */
-body.press-room .media-body {
-  padding-bottom: 2em;
-}
 body.european-week #european_week_date {
   color: #FFF;
   font-size: 2.2em;
@@ -5394,7 +5403,8 @@ body.european-week #european_week_date {
   font-weight: bold;
 }
 body.european-week .view-frontpage-events .views-row {
-  height: 128px;
+  min-height: 128px;
+  height: auto;
   padding-bottom: 5px;
   padding-top: 5px;
 }
@@ -5429,7 +5439,6 @@ body.european-week #block-views-news-european-week {
 }
 body.european-week #block-views-news-european-week ul > li:nth-child(2) {
   border-bottom: 0;
-  padding-bottom: 0;
 }
 .page-node-linguatools #block-system-main {
   padding: 3em;
@@ -6352,13 +6361,12 @@ body.front-page .main-container #block-views-homepage-banners-block .view-homepa
 }
 body.front-page .main-container #block-views-homepage-banners-block .view-homepage-banners .views-row-first p,
 body.front-page .main-container #block-views-homepage-banners-block .view-homepage-banners .views-row-last p {
-  display: flex;
   flex-wrap: wrap;
   justify-content: center;
   color: #FFF;
   padding-top: 1em;
-  padding-bottom: 2em;
-  max-width: 540px;
+  padding-bottom: 1.5em;
+  max-width: 575px;
   margin: 0 auto;
   font-size: 1.2em;
 }
@@ -6368,8 +6376,13 @@ body.front-page .main-container #block-views-homepage-banners-block .view-homepa
   justify-content: center;
   align-items: center;
 }
-body.front-page .main-container #block-views-homepage-banners-block .view-homepage-banners .views-row-last p {
+body.front-page .main-container #block-views-homepage-banners-block .view-homepage-banners .views-row-first > p:nth-child(4) {
   max-width: 600px;
+  display: flex;
+}
+body.front-page .main-container #block-views-homepage-banners-block .view-homepage-banners .views-row-last p:nth-child(4) {
+  max-width: 600px;
+  display: flex;
 }
 body.front-page .main-container #block-views-partners-block-1 {
   margin-top: 2em;
@@ -7475,7 +7488,7 @@ html:lang(el) body.page-tools-and-publications-practical-tools .views-exposed-wi
   background: #FFF;
   border: 2px solid #bcd75b;
   border-radius: 7px;
-  width: 215px;
+  width: 320px;
   padding: 1em;
   z-index: 9999999;
   position: absolute;
@@ -7492,6 +7505,10 @@ html:lang(el) body.page-tools-and-publications-practical-tools .views-exposed-wi
 }
 .contentPop {
   padding-right: 15px;
+}
+.contentPop p {
+  color: #59595A !important;
+  font-size: 14px !important;
 }
 /* Video */
 body.video-page .col-md-9 {
@@ -8202,24 +8219,28 @@ html:lang(is) body a.more-link,
 html:lang(it) body a.more-link,
 html:lang(nl) body a.more-link,
 html:lang(pl) body a.more-link,
+html:lang(hu) body a.more-link,
 html:lang(ro) body a.more-link,
 html:lang(es) body .news-see-more-button,
 html:lang(is) body .news-see-more-button,
 html:lang(it) body .news-see-more-button,
 html:lang(nl) body .news-see-more-button,
 html:lang(pl) body .news-see-more-button,
+html:lang(hu) body .news-see-more-button,
 html:lang(ro) body .news-see-more-button,
 html:lang(es) body .view-events-search .views-field-view-node .field-content a,
 html:lang(is) body .view-events-search .views-field-view-node .field-content a,
 html:lang(it) body .view-events-search .views-field-view-node .field-content a,
 html:lang(nl) body .view-events-search .views-field-view-node .field-content a,
 html:lang(pl) body .view-events-search .views-field-view-node .field-content a,
+html:lang(hu) body .view-events-search .views-field-view-node .field-content a,
 html:lang(ro) body .view-events-search .views-field-view-node .field-content a,
 html:lang(es) body .views-field-search-api-relevance a,
 html:lang(is) body .views-field-search-api-relevance a,
 html:lang(it) body .views-field-search-api-relevance a,
 html:lang(nl) body .views-field-search-api-relevance a,
 html:lang(pl) body .views-field-search-api-relevance a,
+html:lang(hu) body .views-field-search-api-relevance a,
 html:lang(ro) body .views-field-search-api-relevance a {
   background: url(../images/ico-plus-green.png) no-repeat 95% 4px;
 }
@@ -8246,6 +8267,7 @@ html:lang(el) body .views-field-search-api-relevance a {
   float: none;
   text-transform: none;
   padding-left: 0;
+  width: auto;
 }
 #block-views-publications-slideshow-slidehow .more-link:hover,
 .node-type-priority-area .region-content .block-hwc-priority-areas ul li .more-link:hover {
@@ -8576,9 +8598,17 @@ body.page-node-253 #block-hwc-partner-hwc-partner-back-to-private-zone .breadcru
   body.page-tools-and-publications-publications ol.multicarousel-indicators {
     display: none;
   }
-  html:lang(de) .intro-footer,
+  html:lang(de) .intro-footer {
+    max-width: 785px;
+  }
+  html:lang(de) .intro-footer p:nth-child(2) {
+    letter-spacing: -0.25px;
+  }
   html:lang(el) .intro-footer {
-    max-width: 615px;
+    max-width: 785px;
+  }
+  html:lang(el) .intro-footer p:nth-child(1) {
+    letter-spacing: -0.69px;
   }
   /*MHWC-141 with year only style*/
   .page-node-184.year-only .timeline > div:nth-child(3) {
@@ -8631,8 +8661,17 @@ body.page-node-253 #block-hwc-partner-hwc-partner-back-to-private-zone .breadcru
     width: 170px;
   }
   .intro-footer {
-    max-width: 460px;
-    font-size: 12px;
+    max-width: 600px;
+    font-size: 14px;
+  }
+  .footer div.on-the-web {
+    margin-top: 0;
+  }
+  .footer div.on-the-web span:nth-child(1) {
+    padding: 1rem 0;
+    padding: 0 0 0.5rem !important;
+    float: none;
+    text-align: left;
   }
   html:lang(bg) header.navbar-default .navbar-collapse nav ul.menu > li,
   html:lang(da) header.navbar-default .navbar-collapse nav ul.menu > li,
@@ -8762,9 +8801,8 @@ body.page-node-253 #block-hwc-partner-hwc-partner-back-to-private-zone .breadcru
     width: 84% !important;
   }
   .content-order-copy img {
-    float: none;
-    margin-left: 0;
-    margin-top: 1em;
+    width: 78px;
+    top: 22px;
   }
   .page-events #block-osha-newsletter-osha-newsletter-events-subscribe {
     display: none;
@@ -8855,7 +8893,7 @@ body.page-node-253 #block-hwc-partner-hwc-partner-back-to-private-zone .breadcru
   }
   /* Get your certificate */
   .page-get-involved-get-your-certificate .pane-node-body {
-    width: 55%;
+    width: 75%;
   }
   .page-get-involved-get-your-certificate form.webform-client-form .form-select {
     height: 34px;
@@ -8988,6 +9026,30 @@ body.page-node-253 #block-hwc-partner-hwc-partner-back-to-private-zone .breadcru
   }
 }
 @media (max-width: 1280px) {
+  html:lang(hr) body.front-page .main-container #block-views-homepage-banners-block .view-homepage-banners .views-row-even,
+  html:lang(lt) body.front-page .main-container #block-views-homepage-banners-block .view-homepage-banners .views-row-even,
+  html:lang(hu) body.front-page .main-container #block-views-homepage-banners-block .view-homepage-banners .views-row-even,
+  html:lang(pl) body.front-page .main-container #block-views-homepage-banners-block .view-homepage-banners .views-row-even,
+  html:lang(sk) body.front-page .main-container #block-views-homepage-banners-block .view-homepage-banners .views-row-even,
+  html:lang(mt) body.front-page .main-container #block-views-homepage-banners-block .view-homepage-banners .views-row-even,
+  html:lang(hr) body.front-page .main-container #block-views-homepage-banners-block .view-homepage-banners .views-row-odd,
+  html:lang(lt) body.front-page .main-container #block-views-homepage-banners-block .view-homepage-banners .views-row-odd,
+  html:lang(hu) body.front-page .main-container #block-views-homepage-banners-block .view-homepage-banners .views-row-odd,
+  html:lang(pl) body.front-page .main-container #block-views-homepage-banners-block .view-homepage-banners .views-row-odd,
+  html:lang(sk) body.front-page .main-container #block-views-homepage-banners-block .view-homepage-banners .views-row-odd,
+  html:lang(mt) body.front-page .main-container #block-views-homepage-banners-block .view-homepage-banners .views-row-odd {
+    font-size: 0.9em;
+  }
+  html:lang(bg) body.front-page .main-container #block-views-homepage-banners-block .view-homepage-banners .views-row-last,
+  html:lang(de) body.front-page .main-container #block-views-homepage-banners-block .view-homepage-banners .views-row-last,
+  html:lang(lv) body.front-page .main-container #block-views-homepage-banners-block .view-homepage-banners .views-row-last,
+  html:lang(nl) body.front-page .main-container #block-views-homepage-banners-block .view-homepage-banners .views-row-last,
+  html:lang(no) body.front-page .main-container #block-views-homepage-banners-block .view-homepage-banners .views-row-last,
+  html:lang(pt) body.front-page .main-container #block-views-homepage-banners-block .view-homepage-banners .views-row-last,
+  html:lang(ro) body.front-page .main-container #block-views-homepage-banners-block .view-homepage-banners .views-row-last,
+  html:lang(it) body.front-page .main-container #block-views-homepage-banners-block .view-homepage-banners .views-row-last {
+    height: 430px;
+  }
   html:lang(de) .intro-splash-20 .views-row-first h1,
   html:lang(el) .intro-splash-20 .views-row-first h1,
   html:lang(es) .intro-splash-20 .views-row-first h1,
@@ -9082,8 +9144,22 @@ body.page-node-253 #block-hwc-partner-hwc-partner-back-to-private-zone .breadcru
   body.front-page .main-container #block-views-homepage-banners-block .view-homepage-banners .view-content > div:nth-child(3) {
     order: 4;
   }
+  html:lang(bg) body.front-page .main-container #block-views-homepage-banners-block .view-homepage-banners .views-row-last,
+  html:lang(de) body.front-page .main-container #block-views-homepage-banners-block .view-homepage-banners .views-row-last,
+  html:lang(lv) body.front-page .main-container #block-views-homepage-banners-block .view-homepage-banners .views-row-last,
+  html:lang(nl) body.front-page .main-container #block-views-homepage-banners-block .view-homepage-banners .views-row-last,
+  html:lang(no) body.front-page .main-container #block-views-homepage-banners-block .view-homepage-banners .views-row-last,
+  html:lang(pt) body.front-page .main-container #block-views-homepage-banners-block .view-homepage-banners .views-row-last,
+  html:lang(ro) body.front-page .main-container #block-views-homepage-banners-block .view-homepage-banners .views-row-last,
+  html:lang(it) body.front-page .main-container #block-views-homepage-banners-block .view-homepage-banners .views-row-last {
+    height: auto;
+  }
   .intro-footer {
     max-width: 100%;
+  }
+  /* Get your certificate */
+  .page-get-involved-get-your-certificate .pane-node-body {
+    width: 66%;
   }
   header.navbar-default.sticky-menu .campaigns-header .navbar-header .col-xs-12.col-sm-9 {
     display: flex;
