--- a/docroot/sites/all/themes/hwc_frontend/less/content.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/content.less
@@ -11193,6 +11193,11 @@ blockquote.image-field-caption {
     width: 100%;
     font-size: 10px;
     color: #57575a;
+    span.blockquote-copyright{
+    	display: block;
+    	clear: both;
+    	height: 14px;
+    }
     p{
 	  	z-index: 999;
 	    position: relative;
