--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
@@ -99,6 +99,15 @@
 		}
 	}
 
+	html:lang(es)
+	{
+		.intro-splash-20{
+			.views-row-first > p:nth-child(3){
+				font-size: 1em;
+			}
+		}
+	}
+
 	.previous-next.two-arrows{
 		height: 114px;
     	align-items: flex-start;
@@ -775,6 +784,21 @@
 						}
 					}
 				}
+			}
+		}
+	}
+}
+
+
+@media (max-width: 1340px) {
+	html:lang(es)
+	{
+		.intro-splash-20{
+			h2{
+				font-size: 1.8em;
+			}
+			.views-row-first > p:nth-child(3){
+				font-size: 1em;
 			}
 		}
 	}
