--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -522,6 +522,16 @@ html:lang(ro)
 }
 
 
+html:lang(es)
+{
+	.intro-splash-20{
+		.views-row-first > p:nth-child(3){
+			max-width: 495px;
+		}
+	}
+}
+
+
 
 /* Coming Soon */
 
