--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
@@ -505,8 +505,8 @@
 
 @media (max-width: 1465px) {
 
-	html:lang(de), html:lang(es),html:lang(bg) {
-		/*HW20-884*/
+	html:lang(de), html:lang(es),html:lang(bg),html:lang(el) {
+		/*HW20-884*/ /*MHWC-409*/ 
 		.page_title h1 {
 		    font-size: 2.6em;
 		}	
