--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -9898,3 +9898,12 @@ body.page-node-253{
 .link-pz-guide{
 	font-weight: 600;
 }
+
+#block-hwc-partner-hwc-partner-private-zone-gpep{
+	.breadcrumb{
+		padding-left: 0;
+		span:before{
+			content: none;
+		}
+	}
+}
