--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -7894,6 +7894,9 @@ body.page-tools-and-publications-publications{
 			    		margin-bottom: 0em;
 			    		margin-right: 1em;
 					}
+					blockquote.image-field-caption{
+						display: none;
+					}
 				}
 
 				.field-name-body{
