--- a/docroot/sites/all/themes/hwc_frontend/less/header.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/header.less
@@ -128,7 +128,6 @@ header.navbar-default{
 			.header-text:lang(bg),
 			.header-text:lang(da),
 			.header-text:lang(el),
-			.header-text:lang(de),
 			.header-text:lang(et),
 			.header-text:lang(fr),
 			.header-text:lang(hr),
@@ -149,6 +148,10 @@ header.navbar-default{
 			.header-text:lang(ro){
 				font-size: 1.2em !important;
 				padding-left: 1em;
+			}
+
+			.header-text:lang(de){
+				max-width: 315px !important;
 			}
 			
 			/* languages */
