--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
@@ -85,8 +85,8 @@
 						}
 						.header-text{
 							margin-left: auto;
-					    border: 0;
-					    margin-top: 0;
+						    border: 0;
+						    margin-top: 0;
 						}					
 					}
 				}
@@ -128,12 +128,15 @@
 						}
 					}
 					.header-text{
-				    width: auto;
-				    padding: 1rem 3rem 0 1rem;
-				    margin-top: 2rem;
-				    border-left: 1px solid;
-				    margin-left: 1em;
-					}					
+					    width: auto;
+					    padding: 1rem 3rem 0 1rem;
+					    margin-top: 2rem;
+					    border-left: 1px solid;
+					    margin-left: 1em;
+					}	
+					.header-text:lang(de){
+						padding: 1rem 2rem 0 1rem;
+					}				
 				}
 			}
 		}	
