--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
@@ -1,5 +1,17 @@
 @media (max-width: 992px) {
 
+	/* MHWC-449 - new social media page */
+	.node-type-article{	
+		#block-views-social-dashboard-twitter{
+			.view-social-dashboard{
+				.view-content{
+					height: 100%;
+					overflow-y: hidden;
+				}
+			}
+		}
+}
+
 	body.front-page{
 		.main-container{
 			#block-views-homepage-banners-block{
