--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
@@ -3,6 +3,7 @@
 }
 
 @media (min-width: 1200px) {
+	
 	/*Slider Publications*/
 	body.page-tools-and-publications-publications{
 		.slider--video--section{
@@ -801,5 +802,20 @@
 				font-size: 1em;
 			}
 		}
+	}
+}
+
+@media (min-width: 991px) {
+	/* MHWC-449 - new social media page */
+	.node-type-article{
+	
+		aside.col-md-9.no-padding-aside{
+			width: 67%;
+		}
+		
+		aside.col-md-3.no-padding-aside{
+			width: 33%;
+		}
+		
 	}
 }
