--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
@@ -1,5 +1,18 @@
 @media (max-width: 768px){
 
+	/* MHWC-449 - new social media page */
+	.node-type-article{
+	
+		aside.col-md-9.no-padding-aside{
+			width: 100%;
+		}
+		
+		aside.col-md-3.no-padding-aside{
+			width: 100%;
+		}
+		
+	}
+
 	body.front-page{
 		.main-container{
 			#block-hwc-homepage-hwc-homepage-news-events{
