--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -9901,3 +9901,31 @@ body.page-node-253{
 		}
 	}
 }
+
+/* MHWC-449 - new social media page */
+.node-type-article{	
+	
+	aside.no-padding-aside{
+		.view-social-dashboard{
+			.view-footer{
+				padding-top: 0.5em;
+			}
+		}
+	}
+	
+	#block-views-social-dashboard-twitter{
+		.view-social-dashboard{
+			.view-header{
+				h2{
+					a{
+						font-size: 2.25rem;
+					}
+				}
+			}
+			.view-content{
+				height: 500px;
+				overflow-y: scroll;
+			}
+		}
+	}
+}
