MHWC-425 - My public profile: The boxes should be displayed in one line

--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-min-1200.less
@@ -819,3 +819,14 @@
 		
 	}
 }
+
+/*MHWC-425 - My public profile: The boxes should be displayed in one line*/
+@media (min-width: 1531px) and (max-width: 1547px){
+	.profile-edit-links-container .pane-hwc-partner-hwc-partner-private-link-0, 
+	.profile-edit-links-container .pane-hwc-partner-hwc-partner-private-link-1, 
+	.profile-edit-links-container .pane-hwc-partner-hwc-partner-private-link-2, 
+	.profile-edit-links-container .pane-hwc-partner-hwc-partner-private-link-3, 
+	.profile-edit-links-container .pane-node-profile-update-link{
+			width: 285px;
+	}
+}
