MHWC-408 - Download publications - layout

--- a/docroot/sites/all/themes/hwc_frontend/less/content.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/content.less
@@ -6773,12 +6773,13 @@ html:lang(hu) , html:lang(nl), html:lang(mt) {
 		width:90%;
 		ul li ul li a{
 			display:block;
+			font-weight: bold;
 			float:left;
 			width: 55px;
-    		margin-right: 25px;
+    		margin-right: 0;
 			span.glyphicon.glyphicon-circle-arrow-down{
-				float:right;
-
+				float: left;
+				top: 2px;
 			}
 		}
 	}
