--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -1989,33 +1989,26 @@ span.title-select {
   opacity: 0.8;
 }
 .content-order-copy {
-  color: #003399;
-  padding: 1.5em 0 1em 1em;
-  margin-top: 10px;
-  background: #daea96;
-  float: left;
-  width: 100%;
-  margin-bottom: 1em;
-  position: relative;
-  border-radius: 5px;
+  clear: both;
+  padding-top: 0.5em;
 }
 .content-order-copy img {
   width: 120px;
   height: auto;
   float: right;
   margin-left: 1em;
-  position: absolute;
-  right: 10px;
-  top: 14px;
+  margin-top: -2px;
 }
 .content-order-copy a {
   color: #003399;
   font-weight: bold;
   text-decoration: underline;
   font-size: 1.2rem;
-  width: 135px;
   padding-right: 0;
   float: left;
+  background: #daea96;
+  border-radius: 5px;
+  padding: 1.7em 1em 1em 1em;
 }
 .content-order-copy a:hover {
   text-decoration: none;
@@ -2148,6 +2141,29 @@ div.publications-detail-right-column > a.download {
 }
 .node-type-publication .publications-row {
   margin-bottom: 0;
+}
+.node-type-publication .field-name-field-file {
+  margin-top: 1.5em;
+}
+.node-type-publication .field-name-field-file ul {
+  list-style: none;
+  padding-top: 1px;
+  padding-left: 0;
+}
+.node-type-publication .field-name-field-file ul li {
+  float: left;
+}
+.node-type-publication .field-name-field-file ul li .form-group {
+  float: left;
+}
+.node-type-publication .field-name-field-file ul li > .form-group:nth-child(1) {
+  padding-right: 5px;
+}
+.node-type-publication .field-name-field-file ul li .slash {
+  float: left;
+  padding: 0;
+  font-weight: 600;
+  margin-top: -1px;
 }
 .publications-row.last {
   margin-bottom: 0em;
