--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -2326,32 +2326,25 @@ span.title-select{
 }
 
 .content-order-copy{
-	color: #003399;
-	padding: 1.5em 0 1em 1em;
-	margin-top: 10px;
-	background: #daea96;
-	float: left;
-	width: 100%;
-	margin-bottom: 1em;
-	position: relative;
-	border-radius: 5px;
+	clear: both;
+	padding-top: 0.5em;
 	img{
 		width: 120px;
 		height: auto;
 		float: right;
 		margin-left: 1em;
-		position: absolute;
-		right: 10px;
-		top: 14px;
+		margin-top: -2px;
 	}
 	a{
 		color:#003399;
 		font-weight: bold;
 		text-decoration: underline;
 		font-size: 1.2rem;
-		width: 135px;
 		padding-right: 0;
 		float: left;
+		background: #daea96;
+		border-radius: 5px;
+		padding: 1.7em 1em 1em 1em;
 		&:hover{
 			text-decoration: none;
 			img{
@@ -2511,6 +2504,29 @@ div.publications-detail-right-column > a.download{
 .node-type-publication{
 	.publications-row{
 		margin-bottom: 0;
+	}
+	.field-name-field-file{
+		margin-top: 1.5em;
+		ul{
+			list-style: none;
+			padding-top: 1px;
+			padding-left: 0;
+			li{
+				float: left;
+				.form-group{
+					float: left;
+				}
+				> .form-group:nth-child(1){
+					padding-right: 5px;
+				}
+				.slash{
+					float: left;
+				    padding: 0;
+				    font-weight: 600;
+				    margin-top: -1px;
+				}
+			}
+		}
 	}
 }
 
