MHWC-479 - Add styles to the banner view page

--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-767.less
@@ -328,6 +328,17 @@
 		}
 	}
 
+	/* View Home page banners detail views*/
+	.node-type-frontpage-slider{
+		.main-container{
+			.col-md-6{
+				.field-name-body{
+					height: auto;
+				}
+			}
+		}
+	}
+
 
 }
 
