--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -282,7 +282,7 @@ select{
 	} 
 }
 
-.btn-background-transparent{
+.btn-background-transparent, .btn-background-transparent-minor-size{
 	background: transparent;
 	min-width: 208px;
 	width: auto;
@@ -6242,7 +6242,6 @@ body.european-week{
 
 
 /* Styling Wysiwyg  */
-
 .float-img{
 	float: left;
 	margin-right: 1em;
@@ -6251,6 +6250,22 @@ body.european-week{
 .float-img-2{
 	float: left;
 	margin-right: 2em;
+}
+
+.btn-background-transparent-minor-size{
+	font-size: 1.3rem;
+}
+
+h1.h1-minor-font-size{
+	font-size: 1.8em !important;
+}
+
+h2.h2-minor-font-size{
+	font-size: 1.9em !important;
+}
+
+.paragraph-more-text{
+	max-width: 670px !important;
 }
 
 /* Styles for Release 2, This styles shouldn't be merge on release_1 branch */
