--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -10026,3 +10026,26 @@ body.page-node-253{
 		}
 	}
 }
+
+.page-news{
+	.view-news{
+		.view-content{
+	    	.views-row{
+	    		.field-name-field-image{
+	    			border: 2px solid #bcd75b;
+				    float: left;
+				    padding-right: 0;
+				    margin-right: 20px;
+				    margin-top: 13px;
+				    border-radius: 7px;
+				    height: 114px;
+				    width: 114px;
+				    img{
+				    	border: 0;
+				    	margin-top:0;
+				    }
+	    		}
+	    	}
+	    }
+	}
+}
